[project]
name = "PET-Optimise"
version = "0.1.0"
description = "An optimisation tool for the PET"
authors = [
    {name = "DevDolphin7",email = "devdolphin7@outlook.com"}
]
license = {text = "LICENSE"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (>=3.0.2,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
package-mode = false
